2006-09-07  Pavel Tsekov  <ptsekov@gmx.net>

	* mountlist.c: Sync with gnulib.
	All uses of HAVE_F_FSTYPENAME replaced by
	HAVE_STRUCT_STATFS_F_FSTYPENAME.
	[MOUNTED_GETMNTINFO2] Include sys/statvfs.h.
	(read_file_system_list) [MOUNTED_GETMNTINFO2]: Implement.

2006-09-07  Pavel Tsekov  <ptsekov@gmx.net>

	* mountlist.c: Revert a failed attempt to properly detect and use
	getmntinfo() returning its result in struct statvfs.

2006-08-12  Leonard den Ottolander  <leonard den ottolander nl>

	* key.c (check_selects): Get rid of the now redundant else.

2006-08-12  Leonard den Ottolander  <leonard den ottolander nl>

	* key.c (check_selects): Initialize retry to FALSE every time we enter
	the do/while loop (bug introduced when incorrectly rewriting the
	backward goto used by the original submitter).

2006-08-11  Mikulas Patocka  <mikulas@artax.karlin.mff.cuni.cz>

	* key.c (check_selects): Fix possible crash on reference to select list
	element removed in callback.

2006-08-09  Denis Vlasenko  <vda.linux@googlemail.com>

	* key.c: Make escape key timeout user configurable via the
	environment variable KEYBOARD_KEY_TIMEOUT_US (in microseconds).

2006-08-08  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* hotlist.c (update_path_name): Fix gcc4 warning.

2006-06-26  Oswald Buddenhagen  <ossi@kde.org>

	* hotlist.c (remove_from_hotlist): Fix erronous check of the return
	value of query_dialog().

2006-08-03  Roland Illig  <roland.illig@gmx.de>

	* view.c: Added correct handling of Mac line endings.

2006-06-26  Pavel Tsekov  <ptsekov@gmx.net>

	* vfsdummy.h [!USE_VFS] (mc_getlocalcopy): Implement.

2006-06-17  Pavel Tsekov  <ptsekov@gmx.net>

	* mountlist.c (fstype_to_string): Update the code to match its
	coreutils counterpart.
	Guard the use of MOUNT_UFS and MOUNT_NFS with appropriate
	ifdefs as the rest of the code does.

2006-06-17  Pavel Tsekov  <ptsekov@gmx.net>

	* mountlist.c (HAVE_F_FSTYPENAME): Define when getmntinfo() is